certificates/frontend-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: stage-ux-svc
spec:
  selector:
    app: stage-ux-v2
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-ux-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: staging-ingress-ip
    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/acme-http01-edit-in-place: "true"
  labels:
    app: stage-ux-v2
spec:
  backend:
    serviceName: stage-ux-svc
    servicePort: 80
  tls:
  - secretName: sampleapps-staging-tls
    hosts:
    - sampleapps.com
